# Ar_Mainpulator

./: README.md
ebot_mani/: .setup_assistant  CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
ebot_mani/atomic_configure/: .rosinstall  local_setup.sh
ebot_mani/catkin_generated/: ebot_mani-msg-extras.cmake.installspace.in  generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
ebot_mani/catkin_generated/installspace/: ebot_mani-msg-paths.cmake  ebot_mani.pc  ebot_maniConfig.cmake
ebot_mani/catkin_generated/stamps/ebot_mani/: _setup_util.py.stamp
ebot_mani/cmake/: ebot_mani-genmsg-context.py  ebot_mani-genmsg.cmake
ebot_mani/config/: fake_controllers.yaml  ip_params.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  ur_robotiq.srdf
ebot_mani/devel/: .catkin  setup.sh
ebot_mani/devel/lib/pkgconfig/: ebot_mani.pc
ebot_mani/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ebot_mani/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ebot_mani/gtest/googlemock/gtest/: CTestTestfile.cmake  (+1 more)
ebot_mani/launch/: ar_test.launch  demo_gazebo.launch  ip.sh  ip_params.yaml  move_group.launch  moveit.rviz  server.sh  server_connect.launch  ur5_bringup_moveit.launch
ebot_mani/msg/: UR5MoveitJoints.msg
ebot_mani/scripts/: arm_joint_angle.py  end_effector_pose.py  go_to_pose.py  model_mover.py  server_endpoint.py
ebot_mani/srv/: MoverService.srv
ebot_mani/urdf/: ur_robotiq.urdf.xacro
(+5 files in other folders)
